Start using micrometer tags consistently